First commited as before_65026_rev1