@@ -11,9 +11,9 @@
  *******************************************************************************/
 package org.eclipse.jface.preference;
 
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
-
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.events.SelectionAdapter;
+import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
@@ -207,7 +207,12 @@ public class ScaleFieldEditor extends FieldEditor {
         if (scale == null) {
             scale = new Scale(parent, SWT.HORIZONTAL);
             scale.setFont(parent.getFont());
-            scale.addSelectionListener(widgetSelectedAdapter(event -> valueChanged()));
+            scale.addSelectionListener(new SelectionAdapter() {
+                @Override
+				public void widgetSelected(SelectionEvent event) {
+                    valueChanged();
+                }
+            });
             scale.addDisposeListener(event -> scale = null);
         } else {
             checkParent(scale, parent);
@@ -334,7 +339,8 @@ public class ScaleFieldEditor extends FieldEditor {
         int newValue = scale.getSelection();
         if (newValue != oldValue) {
             fireStateChanged(IS_VALID, false, true);
-			fireValueChanged(VALUE, Integer.valueOf(oldValue), Integer.valueOf(newValue));
+            fireValueChanged(VALUE, new Integer(oldValue),
+                    new Integer(newValue));
             oldValue = newValue;
         }
     }
