@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2016 IBM Corporation and others.
+ * Copyright (c) 2005, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,13 +10,11 @@
  *     Remy Chi Jian Suen <remy.suen@gmail.com> -
  *     		Bug 186522 - [KeyBindings] New Keys preference page does not resort by binding with conflicts
  *     		Bug 226342 - [KeyBindings] Keys preference page conflict table is hard to read
- *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 440810, 491393
+ *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 440810
  *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug 442215
  *******************************************************************************/
 
 package org.eclipse.ui.internal.keys;
-
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -42,15 +40,18 @@ import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.jface.resource.JFaceResources;
 import org.eclipse.jface.resource.LocalResourceManager;
 import org.eclipse.jface.util.IPropertyChangeListener;
+import org.eclipse.jface.util.PropertyChangeEvent;
 import org.eclipse.jface.viewers.ColumnWeightData;
 import org.eclipse.jface.viewers.ComboViewer;
 import org.eclipse.jface.viewers.IBaseLabelProvider;
 import org.eclipse.jface.viewers.ISelection;
+import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredContentProvider;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.ITableLabelProvider;
 import org.eclipse.jface.viewers.ITreeContentProvider;
 import org.eclipse.jface.viewers.LabelProvider;
+import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.TableLayout;
 import org.eclipse.jface.viewers.TableViewer;
@@ -60,10 +61,13 @@ import org.eclipse.jface.viewers.ViewerComparator;
 import org.eclipse.jface.window.Window;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.BusyIndicator;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.FocusEvent;
 import org.eclipse.swt.events.FocusListener;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
+import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.graphics.FontMetrics;
 import org.eclipse.swt.graphics.GC;
 import org.eclipse.swt.graphics.Image;
@@ -128,7 +132,8 @@ import org.eclipse.ui.keys.IBindingService;
  *
  * @since 3.2
  */
-public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchPreferencePage {
+public class NewKeysPreferencePage extends PreferencePage implements
+		IWorkbenchPreferencePage {
 
 	private static boolean DEBUG = Policy.DEBUG_KEY_BINDINGS;
 
@@ -202,7 +207,8 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 		 * @param treeStyle
 		 * @param filter
 		 */
-		protected CategoryFilterTree(Composite parent, int treeStyle, CategoryPatternFilter filter) {
+		protected CategoryFilterTree(Composite parent, int treeStyle,
+				CategoryPatternFilter filter) {
 			super(parent, treeStyle, filter, true);
 			this.filter = filter;
 			setQuickSelectionMode(true);
@@ -219,24 +225,24 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 	}
 
 	private final class BindingModelComparator extends ViewerComparator {
-		private LinkedList<Integer> sortColumns = new LinkedList<>();
+		private LinkedList sortColumns = new LinkedList();
 		private boolean ascending = true;
 
 		public BindingModelComparator() {
 			for (int i = 0; i < NUM_OF_COLUMNS; i++) {
-				sortColumns.add(Integer.valueOf(i));
+				sortColumns.add(new Integer(i));
 			}
 		}
 
 		public int getSortColumn() {
-			return sortColumns.getFirst().intValue();
+			return ((Integer) sortColumns.getFirst()).intValue();
 		}
 
 		public void setSortColumn(int column) {
 			if (column == getSortColumn()) {
 				return;
 			}
-			Integer sortColumn = Integer.valueOf(column);
+			Integer sortColumn = new Integer(column);
 			sortColumns.remove(sortColumn);
 			sortColumns.addFirst(sortColumn);
 		}
@@ -260,9 +266,9 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 		public final int compare(final Viewer viewer, final Object a,
 				final Object b) {
 			int result = 0;
-			Iterator<Integer> i = sortColumns.iterator();
+			Iterator i = sortColumns.iterator();
 			while (i.hasNext() && result == 0) {
-				int column = i.next().intValue();
+				int column = ((Integer) i.next()).intValue();
 				result = compareColumn(viewer, a, b, column);
 			}
 			return ascending ? result : (-1) * result;
@@ -273,7 +279,8 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 			if (columnNumber == USER_DELTA_COLUMN) {
 				return sortUser(a, b);
 			}
-			IBaseLabelProvider baseLabel = ((TreeViewer) viewer).getLabelProvider();
+			IBaseLabelProvider baseLabel = ((TreeViewer) viewer)
+					.getLabelProvider();
 			if (baseLabel instanceof ITableLabelProvider) {
 				ITableLabelProvider tableProvider = (ITableLabelProvider) baseLabel;
 				String e1p = tableProvider.getColumnText(a, columnNumber);
@@ -300,7 +307,8 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 		private final TreeViewer viewer;
 		private final int column;
 
-		private ResortColumn(BindingModelComparator comparator, TreeColumn treeColumn, TreeViewer viewer, int column) {
+		private ResortColumn(BindingModelComparator comparator,
+				TreeColumn treeColumn, TreeViewer viewer, int column) {
 			this.comparator = comparator;
 			this.treeColumn = treeColumn;
 			this.viewer = viewer;
@@ -333,7 +341,8 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 		}
 	}
 
-	private class BindingElementLabelProvider extends LabelProvider implements ITableLabelProvider {
+	private class BindingElementLabelProvider extends LabelProvider implements
+			ITableLabelProvider {
 		/**
 		 * A resource manager for this preference page.
 		 */
@@ -415,6 +424,17 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 				}
 				return null;
 
+//			case USER_DELTA_COLUMN:
+//				if (be.getUserDelta().intValue() == Binding.USER) {
+//					if (be.getConflict().equals(Boolean.TRUE)) {
+//						return ImageFactory.getImage("plus"); //$NON-NLS-1$
+//					}
+//					return ImageFactory.getImage("change"); //$NON-NLS-1$
+//				}
+//				if (be.getConflict().equals(Boolean.TRUE)) {
+//					return ImageFactory.getImage("minus"); //$NON-NLS-1$
+//				}
+//				return ImageFactory.getImage("blank"); //$NON-NLS-1$
 			}
 
 			return null;
@@ -443,7 +463,8 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 
 		@Override
 		public boolean hasChildren(Object element) {
-			return (element instanceof BindingModel) || (element instanceof ContextModel)
+			return (element instanceof BindingModel)
+					|| (element instanceof ContextModel)
 					|| (element instanceof SchemeModel);
 		}
 
@@ -452,11 +473,20 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 			return getChildren(inputElement);
 		}
 
+		@Override
+		public void dispose() {
+		}
+
+		@Override
+		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
+		}
+
 	}
 
 	@Override
 	protected Control createContents(Composite parent) {
-		PlatformUI.getWorkbench().getHelpSystem().setHelp(parent, IWorkbenchHelpContextIds.KEYS_PREFERENCE_PAGE);
+		PlatformUI.getWorkbench().getHelpSystem().setHelp(parent,
+				IWorkbenchHelpContextIds.KEYS_PREFERENCE_PAGE);
 		final Composite page = new Composite(parent, SWT.NONE);
 		GridLayout layout = new GridLayout(1, false);
 		layout.marginWidth = 0;
@@ -464,9 +494,11 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 
 		IDialogSettings settings = getDialogSettings();
 
-		fPatternFilter = new CategoryPatternFilter(true, commandService.getCategory(null));
+		fPatternFilter = new CategoryPatternFilter(true, commandService
+				.getCategory(null));
 		if (settings.get(TAG_FILTER_UNCAT) != null) {
-			fPatternFilter.filterCategories(settings.getBoolean(TAG_FILTER_UNCAT));
+			fPatternFilter.filterCategories(settings
+					.getBoolean(TAG_FILTER_UNCAT));
 		}
 
 		createSchemeControls(page);
@@ -528,24 +560,36 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 		gridData.widthHint = Math.max(widthHint, filtersButton.computeSize(
 				SWT.DEFAULT, SWT.DEFAULT, true).x) + 5;
 		filtersButton.setLayoutData(gridData);
-		filtersButton.addSelectionListener(widgetSelectedAdapter(e -> {
-			KeysPreferenceFiltersDialog dialog = new KeysPreferenceFiltersDialog(getShell());
-			dialog.setFilterActionSet(fFilterActionSetContexts);
-			dialog.setFilterInternal(fFilterInternalContexts);
-			dialog.setFilterUncategorized(fFilteredTree.isFilteringCategories());
-			if (dialog.open() == Window.OK) {
-				fFilterActionSetContexts = dialog.getFilterActionSet();
-				fFilterInternalContexts = dialog.getFilterInternal();
-				fFilteredTree.filterCategories(dialog.getFilterUncategorized());
-
-				// Apply context filters
-				keyController.filterContexts(fFilterActionSetContexts, fFilterInternalContexts);
-
-				ISelection currentContextSelection = fWhenCombo.getSelection();
-				fWhenCombo.setInput(keyController.getContextModel());
-				fWhenCombo.setSelection(currentContextSelection);
+		filtersButton.addSelectionListener(new SelectionListener() {
+			@Override
+			public void widgetDefaultSelected(SelectionEvent e) {
 			}
-		}));
+
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				KeysPreferenceFiltersDialog dialog = new KeysPreferenceFiltersDialog(
+						getShell());
+				dialog.setFilterActionSet(fFilterActionSetContexts);
+				dialog.setFilterInternal(fFilterInternalContexts);
+				dialog.setFilterUncategorized(fFilteredTree
+						.isFilteringCategories());
+				if (dialog.open() == Window.OK) {
+					fFilterActionSetContexts = dialog.getFilterActionSet();
+					fFilterInternalContexts = dialog.getFilterInternal();
+					fFilteredTree.filterCategories(dialog
+							.getFilterUncategorized());
+
+					// Apply context filters
+					keyController.filterContexts(fFilterActionSetContexts,
+							fFilterInternalContexts);
+
+					ISelection currentContextSelection = fWhenCombo
+							.getSelection();
+					fWhenCombo.setInput(keyController.getContextModel());
+					fWhenCombo.setSelection(currentContextSelection);
+				}
+			}
+		});
 
 		// Export bindings to CSV
 		final Button exportButton = new Button(buttonBar, SWT.PUSH);
@@ -555,7 +599,18 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 		gridData.widthHint = Math.max(widthHint, exportButton.computeSize(
 				SWT.DEFAULT, SWT.DEFAULT, true).x) + 5;
 		exportButton.setLayoutData(gridData);
-		exportButton.addSelectionListener(widgetSelectedAdapter(e -> keyController.exportCSV(((Button) e.getSource()).getShell())));
+		exportButton.addSelectionListener(new SelectionListener() {
+
+			@Override
+			public void widgetDefaultSelected(SelectionEvent e) {
+			}
+
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				keyController.exportCSV(((Button) e.getSource()).getShell());
+			}
+
+		});
 
 		return buttonBar;
 	}
@@ -630,33 +685,43 @@ public class NewKeysPreferencePage extends PreferencePage implements IWorkbenchP
 				fBindingService.setKeyFilterEnabled(true);
 			}
 		});
-		fBindingText.addDisposeListener(e -> {
-			if (!fBindingService.isKeyFilterEnabled()) {
-				fBindingService.setKeyFilterEnabled(true);
+		fBindingText.addDisposeListener(new DisposeListener() {
+			@Override
+			public void widgetDisposed(DisposeEvent e) {
+				if (!fBindingService.isKeyFilterEnabled()) {
+					fBindingService.setKeyFilterEnabled(true);
+				}
 			}
 		});
 
 		fKeySequenceText = new KeySequenceText(fBindingText);
 		fKeySequenceText.setKeyStrokeLimit(4);
 		fKeySequenceText
-				.addPropertyChangeListener(event -> {
-if (!event.getOldValue().equals(event.getNewValue())) {
-				final KeySequence keySequence = fKeySequenceText.getKeySequence();
-				if (!keySequence.isComplete()) {
-					return;
-				}
+				.addPropertyChangeListener(new IPropertyChangeListener() {
+					@Override
+					public final void propertyChange(
+							final PropertyChangeEvent event) {
+						if (!event.getOldValue().equals(event.getNewValue())) {
+							final KeySequence keySequence = fKeySequenceText
+									.getKeySequence();
+							if (!keySequence.isComplete()) {
+								return;
+							}
 
-				BindingElement activeBinding = (BindingElement) keyController.getBindingModel()
-						.getSelectedElement();
-				if (activeBinding != null) {
-					activeBinding.setTrigger(keySequence);
-				}
-				fBindingText.setSelection(fBindingText.getTextLimit());
-}
-});
+							BindingElement activeBinding = (BindingElement) keyController
+									.getBindingModel().getSelectedElement();
+							if (activeBinding != null) {
+								activeBinding.setTrigger(keySequence);
+							}
+							fBindingText.setSelection(fBindingText
+									.getTextLimit());
+						}
+					}
+				});
 
 		// Button for adding trapped key strokes
-		final Button addKeyButton = new Button(leftDataArea, SWT.LEFT | SWT.ARROW);
+		final Button addKeyButton = new Button(leftDataArea, SWT.LEFT
+				| SWT.ARROW);
 		addKeyButton
 				.setToolTipText(NewKeysPreferenceMessages.AddKeyButton_ToolTipText);
 		gridData = new GridData();
@@ -665,14 +730,15 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 
 		// Arrow buttons aren't normally added to the tab list. Let's fix that.
 		final Control[] tabStops = dataArea.getTabList();
-		final ArrayList<Control> newTabStops = new ArrayList<>();
-		for (Control tabStop : tabStops) {
+		final ArrayList newTabStops = new ArrayList();
+		for (int i = 0; i < tabStops.length; i++) {
+			Control tabStop = tabStops[i];
 			newTabStops.add(tabStop);
 			if (fBindingText.equals(tabStop)) {
 				newTabStops.add(addKeyButton);
 			}
 		}
-		final Control[] newTabStopArray = newTabStops
+		final Control[] newTabStopArray = (Control[]) newTabStops
 				.toArray(new Control[newTabStops.size()]);
 		dataArea.setTabList(newTabStopArray);
 
@@ -683,19 +749,29 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 			final KeyStroke trappedKey = (KeyStroke) trappedKeyItr.next();
 			final MenuItem menuItem = new MenuItem(addKeyMenu, SWT.PUSH);
 			menuItem.setText(trappedKey.format());
-			menuItem.addSelectionListener(widgetSelectedAdapter(e -> {
-				fKeySequenceText.insert(trappedKey);
-				fBindingText.setFocus();
-				fBindingText.setSelection(fBindingText.getTextLimit());
-			}));
+			menuItem.addSelectionListener(new SelectionAdapter() {
+
+				@Override
+				public void widgetSelected(SelectionEvent e) {
+					fKeySequenceText.insert(trappedKey);
+					fBindingText.setFocus();
+					fBindingText.setSelection(fBindingText.getTextLimit());
+				}
+			});
 		}
-		addKeyButton.addSelectionListener(widgetSelectedAdapter(selectionEvent -> {
-			Point buttonLocation = addKeyButton.getLocation();
-			buttonLocation = dataArea.toDisplay(buttonLocation.x, buttonLocation.y);
-			Point buttonSize = addKeyButton.getSize();
-			addKeyMenu.setLocation(buttonLocation.x, buttonLocation.y + buttonSize.y);
-			addKeyMenu.setVisible(true);
-		}));
+		addKeyButton.addSelectionListener(new SelectionAdapter() {
+
+			@Override
+			public void widgetSelected(SelectionEvent selectionEvent) {
+				Point buttonLocation = addKeyButton.getLocation();
+				buttonLocation = dataArea.toDisplay(buttonLocation.x,
+						buttonLocation.y);
+				Point buttonSize = addKeyButton.getSize();
+				addKeyMenu.setLocation(buttonLocation.x, buttonLocation.y
+						+ buttonSize.y);
+				addKeyMenu.setVisible(true);
+			}
+		});
 
 		// The when label.
 		final Label whenLabel = new Label(leftDataArea, SWT.NONE);
@@ -713,21 +789,29 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		fWhenCombo.getCombo().setLayoutData(gridData);
 		fWhenCombo.setContentProvider(new ModelContentProvider());
 		fWhenCombo.setLabelProvider(new ListLabelProvider());
-		fWhenCombo.addSelectionChangedListener(event -> {
-			ContextElement context = (ContextElement) ((IStructuredSelection) event
-					.getSelection()).getFirstElement();
-			if (context != null) {
-				keyController.getContextModel().setSelectedElement(context);
+		fWhenCombo.addSelectionChangedListener(new ISelectionChangedListener() {
+			@Override
+			public final void selectionChanged(final SelectionChangedEvent event) {
+				ContextElement context = (ContextElement) ((IStructuredSelection) event
+						.getSelection()).getFirstElement();
+				if (context != null) {
+					keyController.getContextModel().setSelectedElement(context);
+				}
 			}
 		});
-		IPropertyChangeListener whenListener = event -> {
-			if (event.getSource() == keyController.getContextModel()
-					&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
-							.getProperty())) {
-				Object newVal = event.getNewValue();
-				StructuredSelection structuredSelection = newVal == null ? null
-						: new StructuredSelection(newVal);
-				fWhenCombo.setSelection(structuredSelection, true);
+		IPropertyChangeListener whenListener = new IPropertyChangeListener() {
+
+			// Sets the combo selection when a new keybinding is selected?
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				if (event.getSource() == keyController.getContextModel()
+						&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
+								.getProperty())) {
+					Object newVal = event.getNewValue();
+					StructuredSelection structuredSelection = newVal == null ? null
+							: new StructuredSelection(newVal);
+					fWhenCombo.setSelection(structuredSelection, true);
+				}
 			}
 		};
 		keyController.addPropertyChangeListener(whenListener);
@@ -767,11 +851,24 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		tableLayout.addColumnData(new ColumnWeightData(60));
 		tableLayout.addColumnData(new ColumnWeightData(40));
 		table.setLayout(tableLayout);
-		conflictViewer.setContentProvider((IStructuredContentProvider) inputElement -> {
-			if (inputElement instanceof Collection) {
-				return ((Collection) inputElement).toArray();
+		conflictViewer.setContentProvider(new IStructuredContentProvider() {
+
+			@Override
+			public Object[] getElements(Object inputElement) {
+				if (inputElement instanceof Collection) {
+					return ((Collection) inputElement).toArray();
+				}
+				return new Object[0];
 			}
-			return new Object[0];
+
+			@Override
+			public void dispose() {
+			}
+
+			@Override
+			public void inputChanged(Viewer viewer, Object oldInput,
+					Object newInput) {
+			}
 		});
 		conflictViewer.setLabelProvider(new BindingElementLabelProvider() {
 			@Override
@@ -784,87 +881,100 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 			}
 		});
 		conflictViewer
-				.addSelectionChangedListener(event -> {
-					ModelElement binding = (ModelElement) ((IStructuredSelection) event.getSelection())
-							.getFirstElement();
-					BindingModel bindingModel = keyController
-							.getBindingModel();
-					if (binding != null
-							&& binding != bindingModel.getSelectedElement()) {
-						StructuredSelection selection = new StructuredSelection(
-								binding);
+				.addSelectionChangedListener(new ISelectionChangedListener() {
 
-						bindingModel.setSelectedElement(binding);
-						conflictViewer.setSelection(selection);
+					// When the conflict viewer's selection changes, update the
+					// model's current selection
+					@Override
+					public void selectionChanged(SelectionChangedEvent event) {
+						ModelElement binding = (ModelElement) ((IStructuredSelection) event
+								.getSelection()).getFirstElement();
+						BindingModel bindingModel = keyController
+								.getBindingModel();
+						if (binding != null
+								&& binding != bindingModel.getSelectedElement()) {
+							StructuredSelection selection = new StructuredSelection(
+									binding);
 
-						boolean selectionVisible = false;
-						TreeItem[] items = fFilteredTree.getViewer()
-								.getTree().getItems();
-						for (TreeItem item : items) {
-							if (item.getData().equals(binding)) {
-								selectionVisible = true;
-								break;
-							}
-						}
-
-						if (!selectionVisible) {
-							fFilteredTree.getFilterControl().setText(""); //$NON-NLS-1$
-							fFilteredTree.getViewer().refresh();
 							bindingModel.setSelectedElement(binding);
 							conflictViewer.setSelection(selection);
+
+							boolean selectionVisible = false;
+							TreeItem[] items = fFilteredTree.getViewer()
+									.getTree().getItems();
+							for (int i = 0; i < items.length; i++) {
+								if (items[i].getData().equals(binding)) {
+									selectionVisible = true;
+									break;
+								}
+							}
+
+							if (!selectionVisible) {
+								fFilteredTree.getFilterControl().setText(""); //$NON-NLS-1$
+								fFilteredTree.getViewer().refresh();
+								bindingModel.setSelectedElement(binding);
+								conflictViewer.setSelection(selection);
+							}
 						}
 					}
 				});
 
-		IPropertyChangeListener conflictsListener = event -> {
-			if (event.getSource() == keyController.getConflictModel()
-					&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
-							.getProperty())) {
-				if (keyController.getConflictModel().getConflicts() != null) {
-					Object newVal = event.getNewValue();
-					StructuredSelection structuredSelection = newVal == null ? null
-							: new StructuredSelection(newVal);
-					conflictViewer.setSelection(structuredSelection, true);
+		IPropertyChangeListener conflictsListener = new IPropertyChangeListener() {
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				if (event.getSource() == keyController.getConflictModel()
+						&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
+								.getProperty())) {
+					if (keyController.getConflictModel().getConflicts() != null) {
+						Object newVal = event.getNewValue();
+						StructuredSelection structuredSelection = newVal == null ? null
+								: new StructuredSelection(newVal);
+						conflictViewer.setSelection(structuredSelection, true);
+					}
+				} else if (ConflictModel.PROP_CONFLICTS.equals(event
+						.getProperty())) {
+					conflictViewer.setInput(event.getNewValue());
+				} else if (ConflictModel.PROP_CONFLICTS_ADD.equals(event
+						.getProperty())) {
+					conflictViewer.add(event.getNewValue());
+				} else if (ConflictModel.PROP_CONFLICTS_REMOVE.equals(event
+						.getProperty())) {
+					conflictViewer.remove(event.getNewValue());
 				}
-			} else if (ConflictModel.PROP_CONFLICTS.equals(event
-					.getProperty())) {
-				conflictViewer.setInput(event.getNewValue());
-			} else if (ConflictModel.PROP_CONFLICTS_ADD.equals(event
-					.getProperty())) {
-				conflictViewer.add(event.getNewValue());
-			} else if (ConflictModel.PROP_CONFLICTS_REMOVE.equals(event
-					.getProperty())) {
-				conflictViewer.remove(event.getNewValue());
 			}
 		};
 		keyController.addPropertyChangeListener(conflictsListener);
 
-		IPropertyChangeListener dataUpdateListener = event -> {
-			BindingElement bindingElement = null;
-			boolean weCare = false;
-			if (event.getSource() == keyController.getBindingModel()
-					&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
-							.getProperty())) {
-				bindingElement = (BindingElement) event.getNewValue();
-				weCare = true;
-			} else if (event.getSource() == keyController.getBindingModel()
-					.getSelectedElement()
-					&& ModelElement.PROP_MODEL_OBJECT.equals(event
-							.getProperty())) {
-				bindingElement = (BindingElement) event.getSource();
-				weCare = true;
-			}
-			if (bindingElement == null && weCare) {
-				commandNameValueLabel.setText(""); //$NON-NLS-1$
-				fDescriptionText.setText(""); //$NON-NLS-1$
-				fBindingText.setText(""); //$NON-NLS-1$
-			} else if (bindingElement != null) {
-				commandNameValueLabel.setText(bindingElement.getName());
-				String desc = bindingElement.getDescription();
-				fDescriptionText.setText(desc==null?"":desc); //$NON-NLS-1$
-				KeySequence trigger = (KeySequence) bindingElement
-						.getTrigger();
-				fKeySequenceText.setKeySequence(trigger);
+		IPropertyChangeListener dataUpdateListener = new IPropertyChangeListener() {
+
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				BindingElement bindingElement = null;
+				boolean weCare = false;
+				if (event.getSource() == keyController.getBindingModel()
+						&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
+								.getProperty())) {
+					bindingElement = (BindingElement) event.getNewValue();
+					weCare = true;
+				} else if (event.getSource() == keyController.getBindingModel()
+						.getSelectedElement()
+						&& ModelElement.PROP_MODEL_OBJECT.equals(event
+								.getProperty())) {
+					bindingElement = (BindingElement) event.getSource();
+					weCare = true;
+				}
+				if (bindingElement == null && weCare) {
+					commandNameValueLabel.setText(""); //$NON-NLS-1$
+					fDescriptionText.setText(""); //$NON-NLS-1$
+					fBindingText.setText(""); //$NON-NLS-1$
+				} else if (bindingElement != null) {
+					commandNameValueLabel.setText(bindingElement.getName());
+					String desc = bindingElement.getDescription();
+					fDescriptionText.setText(desc==null?"":desc); //$NON-NLS-1$
+					KeySequence trigger = (KeySequence) bindingElement
+							.getTrigger();
+					fKeySequenceText.setKeySequence(trigger);
+				}
 			}
 		};
 		keyController.addPropertyChangeListener(dataUpdateListener);
@@ -877,7 +987,8 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 
 		GridData gridData;
 
-		fFilteredTree = new CategoryFilterTree(parent, SWT.SINGLE | SWT.FULL_SELECTION | SWT.BORDER, fPatternFilter);
+		fFilteredTree = new CategoryFilterTree(parent, SWT.SINGLE
+				| SWT.FULL_SELECTION | SWT.BORDER, fPatternFilter);
 		final GridLayout layout = new GridLayout(1, false);
 		layout.marginWidth = 0;
 		fFilteredTree.setLayout(layout);
@@ -904,18 +1015,21 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		BindingModelComparator comparator = new BindingModelComparator();
 		viewer.setComparator(comparator);
 
-		final TreeColumn commandNameColumn = new TreeColumn(tree, SWT.LEFT, COMMAND_NAME_COLUMN);
-		commandNameColumn.setText(NewKeysPreferenceMessages.CommandNameColumn_Text);
+		final TreeColumn commandNameColumn = new TreeColumn(tree, SWT.LEFT,
+				COMMAND_NAME_COLUMN);
+		commandNameColumn
+				.setText(NewKeysPreferenceMessages.CommandNameColumn_Text);
 		tree.setSortColumn(commandNameColumn);
 		tree.setSortDirection(comparator.isAscending() ? SWT.UP : SWT.DOWN);
-		commandNameColumn
-				.addSelectionListener(new ResortColumn(comparator, commandNameColumn, viewer, COMMAND_NAME_COLUMN));
+		commandNameColumn.addSelectionListener(new ResortColumn(comparator,
+				commandNameColumn, viewer, COMMAND_NAME_COLUMN));
 
-		final TreeColumn triggerSequenceColumn = new TreeColumn(tree, SWT.LEFT, KEY_SEQUENCE_COLUMN);
+		final TreeColumn triggerSequenceColumn = new TreeColumn(tree, SWT.LEFT,
+				KEY_SEQUENCE_COLUMN);
 		triggerSequenceColumn
 				.setText(NewKeysPreferenceMessages.TriggerSequenceColumn_Text);
-		triggerSequenceColumn
-				.addSelectionListener(new ResortColumn(comparator, triggerSequenceColumn, viewer, KEY_SEQUENCE_COLUMN));
+		triggerSequenceColumn.addSelectionListener(new ResortColumn(comparator,
+				triggerSequenceColumn, viewer, KEY_SEQUENCE_COLUMN));
 
 		final TreeColumn whenColumn = new TreeColumn(tree, SWT.LEFT,
 				CONTEXT_COLUMN);
@@ -929,9 +1043,11 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		categoryColumn.addSelectionListener(new ResortColumn(comparator,
 				categoryColumn, viewer, CATEGORY_COLUMN));
 
-		final TreeColumn userMarker = new TreeColumn(tree, SWT.LEFT, USER_DELTA_COLUMN);
+		final TreeColumn userMarker = new TreeColumn(tree, SWT.LEFT,
+				USER_DELTA_COLUMN);
 		userMarker.setText(NewKeysPreferenceMessages.UserColumn_Text);
-		userMarker.addSelectionListener(new ResortColumn(comparator, userMarker, viewer, USER_DELTA_COLUMN));
+		userMarker.addSelectionListener(new ResortColumn(comparator,
+				userMarker, viewer, USER_DELTA_COLUMN));
 
 		viewer.setContentProvider(new ModelContentProvider());
 		viewer.setLabelProvider(new BindingElementLabelProvider());
@@ -945,37 +1061,51 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		columns[CATEGORY_COLUMN].setWidth(130);
 		columns[USER_DELTA_COLUMN].setWidth(50);
 
-		viewer.addSelectionChangedListener(event -> {
-			ModelElement binding = (ModelElement) ((IStructuredSelection) event
-					.getSelection()).getFirstElement();
-			keyController.getBindingModel().setSelectedElement(binding);
+		viewer.addSelectionChangedListener(new ISelectionChangedListener() {
+
+			// When the viewer changes selection, update the model's current
+			// selection
+			@Override
+			public void selectionChanged(SelectionChangedEvent event) {
+				ModelElement binding = (ModelElement) ((IStructuredSelection) event
+						.getSelection()).getFirstElement();
+				keyController.getBindingModel().setSelectedElement(binding);
+			}
 		});
 
-		IPropertyChangeListener treeUpdateListener = event -> {
-			if (event.getSource() == keyController.getBindingModel()
-					&& CommonModel.PROP_SELECTED_ELEMENT.equals(event.getProperty())) {
-				Object newVal = event.getNewValue();
-				StructuredSelection structuredSelection = newVal == null ? null : new StructuredSelection(newVal);
-				viewer.setSelection(structuredSelection, true);
-			} else if (event.getSource() instanceof BindingElement
-					&& ModelElement.PROP_MODEL_OBJECT.equals(event.getProperty())) {
-				viewer.update(event.getSource(), null);
-			} else if (BindingElement.PROP_CONFLICT.equals(event
-					.getProperty())) {
-				viewer.update(event.getSource(), null);
-			} else if (BindingModel.PROP_BINDINGS.equals(event
-					.getProperty())) {
-				viewer.refresh();
-			} else if (BindingModel.PROP_BINDING_ADD.equals(event
-					.getProperty())) {
-				viewer.add(keyController.getBindingModel(), event
-						.getNewValue());
-			} else if (BindingModel.PROP_BINDING_REMOVE.equals(event
-					.getProperty())) {
-				viewer.remove(event.getNewValue());
-			} else if (BindingModel.PROP_BINDING_FILTER.equals(event
-					.getProperty())) {
-				viewer.refresh();
+		IPropertyChangeListener treeUpdateListener = new IPropertyChangeListener() {
+
+			// When the model changes a property, update the viewer
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				if (event.getSource() == keyController.getBindingModel()
+						&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
+								.getProperty())) {
+					Object newVal = event.getNewValue();
+					StructuredSelection structuredSelection = newVal == null ? null
+							: new StructuredSelection(newVal);
+					viewer.setSelection(structuredSelection, true);
+				} else if (event.getSource() instanceof BindingElement
+						&& ModelElement.PROP_MODEL_OBJECT.equals(event
+								.getProperty())) {
+					viewer.update(event.getSource(), null);
+				} else if (BindingElement.PROP_CONFLICT.equals(event
+						.getProperty())) {
+					viewer.update(event.getSource(), null);
+				} else if (BindingModel.PROP_BINDINGS.equals(event
+						.getProperty())) {
+					viewer.refresh();
+				} else if (BindingModel.PROP_BINDING_ADD.equals(event
+						.getProperty())) {
+					viewer.add(keyController.getBindingModel(), event
+							.getNewValue());
+				} else if (BindingModel.PROP_BINDING_REMOVE.equals(event
+						.getProperty())) {
+					viewer.remove(event.getNewValue());
+				} else if (BindingModel.PROP_BINDING_FILTER.equals(event
+						.getProperty())) {
+					viewer.refresh();
+				}
 			}
 		};
 		keyController.addPropertyChangeListener(treeUpdateListener);
@@ -1005,7 +1135,12 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		gridData.widthHint = Math.max(widthHint, addBindingButton.computeSize(
 				SWT.DEFAULT, SWT.DEFAULT, true).x) + 5;
 		addBindingButton.setLayoutData(gridData);
-		addBindingButton.addSelectionListener(widgetSelectedAdapter(event -> keyController.getBindingModel().copy()));
+		addBindingButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public final void widgetSelected(final SelectionEvent event) {
+				keyController.getBindingModel().copy();
+			}
+		});
 
 		final Button removeBindingButton = new Button(treeControls, SWT.PUSH);
 		gridData = new GridData();
@@ -1015,7 +1150,12 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		gridData.widthHint = Math.max(widthHint, removeBindingButton
 				.computeSize(SWT.DEFAULT, SWT.DEFAULT, true).x) + 5;
 		removeBindingButton.setLayoutData(gridData);
-		removeBindingButton.addSelectionListener(widgetSelectedAdapter(event -> keyController.getBindingModel().remove()));
+		removeBindingButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public final void widgetSelected(final SelectionEvent event) {
+				keyController.getBindingModel().remove();
+			}
+		});
 
 		final Button restore = new Button(treeControls, SWT.PUSH);
 		gridData = new GridData();
@@ -1024,15 +1164,19 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		gridData.widthHint = Math.max(widthHint, restore.computeSize(
 				SWT.DEFAULT, SWT.DEFAULT, true).x) + 5;
 		restore.setLayoutData(gridData);
-		restore.addSelectionListener(widgetSelectedAdapter(event -> {
-			try {
-				fFilteredTree.setRedraw(false);
-				BindingModel bindingModel = keyController.getBindingModel();
-				bindingModel.restoreBinding(keyController.getContextModel());
-			} finally {
-				fFilteredTree.setRedraw(true);
+		restore.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public final void widgetSelected(final SelectionEvent event) {
+				try {
+					fFilteredTree.setRedraw(false);
+					BindingModel bindingModel = keyController.getBindingModel();
+					bindingModel
+							.restoreBinding(keyController.getContextModel());
+				} finally {
+					fFilteredTree.setRedraw(true);
+				}
 			}
-		}));
+		});
 
 		createButtonBar(treeControls);
 		return treeControls;
@@ -1043,10 +1187,12 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 	 */
 	private void fill() {
 		fSchemeCombo.setInput(keyController.getSchemeModel());
-		fSchemeCombo.setSelection(new StructuredSelection(keyController.getSchemeModel().getSelectedElement()));
+		fSchemeCombo.setSelection(new StructuredSelection(keyController
+				.getSchemeModel().getSelectedElement()));
 
 		// Apply context filters
-		keyController.filterContexts(fFilterActionSetContexts, fFilterInternalContexts);
+		keyController.filterContexts(fFilterActionSetContexts,
+				fFilterInternalContexts);
 		fWhenCombo.setInput(keyController.getContextModel());
 
 		fFilteredTree.filterCategories(fPatternFilter.isFilteringCategories());
@@ -1069,19 +1215,35 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		gridData.widthHint = 150;
 		gridData.horizontalAlignment = SWT.FILL;
 		fSchemeCombo.getCombo().setLayoutData(gridData);
-		fSchemeCombo.addSelectionChangedListener(event -> BusyIndicator.showWhile(fFilteredTree.getViewer().getTree().getDisplay(), () -> {
-			SchemeElement scheme = (SchemeElement) ((IStructuredSelection) event.getSelection())
-					.getFirstElement();
-			keyController.getSchemeModel().setSelectedElement(scheme);
-		}));
-		IPropertyChangeListener listener = event -> {
-			if (event.getSource() == keyController.getSchemeModel()
-					&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
-							.getProperty())) {
-				Object newVal = event.getNewValue();
-				StructuredSelection structuredSelection = newVal == null ? null
-						: new StructuredSelection(newVal);
-				fSchemeCombo.setSelection(structuredSelection, true);
+		fSchemeCombo
+				.addSelectionChangedListener(new ISelectionChangedListener() {
+					@Override
+					public final void selectionChanged(
+							final SelectionChangedEvent event) {
+						BusyIndicator.showWhile(fFilteredTree.getViewer()
+								.getTree().getDisplay(), new Runnable() {
+							@Override
+							public void run() {
+								SchemeElement scheme = (SchemeElement) ((IStructuredSelection) event
+										.getSelection()).getFirstElement();
+								keyController.getSchemeModel()
+										.setSelectedElement(scheme);
+							}
+						});
+					}
+				});
+		IPropertyChangeListener listener = new IPropertyChangeListener() {
+
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				if (event.getSource() == keyController.getSchemeModel()
+						&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
+								.getProperty())) {
+					Object newVal = event.getNewValue();
+					StructuredSelection structuredSelection = newVal == null ? null
+							: new StructuredSelection(newVal);
+					fSchemeCombo.setSelection(structuredSelection, true);
+				}
 			}
 		};
 
@@ -1093,22 +1255,27 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		keyController = new KeyController();
 		keyController.init(workbench);
 
-		commandService = workbench.getService(ICommandService.class);
+		commandService = workbench
+				.getService(ICommandService.class);
 		fDefaultCategory = commandService.getCategory(null);
-		fBindingService = workbench.getService(IBindingService.class);
+		fBindingService = workbench
+				.getService(IBindingService.class);
 
-		commandImageService = workbench.getService(ICommandImageService.class);
+		commandImageService = workbench
+				.getService(ICommandImageService.class);
 	}
 
 	@Override
 	public void applyData(Object data) {
 		if (data instanceof ModelElement) {
-			keyController.getBindingModel().setSelectedElement((ModelElement) data);
+			keyController.getBindingModel().setSelectedElement(
+					(ModelElement) data);
 		}
 		if (data instanceof Binding && fFilteredTree != null) {
 			BindingElement be = (BindingElement) keyController
 					.getBindingModel().getBindingToElement().get(data);
-			fFilteredTree.getViewer().setSelection(new StructuredSelection(be), true);
+			fFilteredTree.getViewer().setSelection(new StructuredSelection(be),
+					true);
 		}
 		if (data instanceof ParameterizedCommand) {
 			Map commandToElement = keyController.getBindingModel().getCommandToElement();
@@ -1139,7 +1306,8 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 		}
 		dialogSettings.put(TAG_FILTER_ACTION_SETS, fFilterActionSetContexts);
 		dialogSettings.put(TAG_FILTER_INTERNAL, fFilterInternalContexts);
-		dialogSettings.put(TAG_FILTER_UNCAT, fFilteredTree.isFilteringCategories());
+		dialogSettings.put(TAG_FILTER_UNCAT, fFilteredTree
+				.isFilteringCategories());
 	}
 
 	protected IDialogSettings getDialogSettings() {
@@ -1171,13 +1339,19 @@ if (!event.getOldValue().equals(event.getNewValue())) {
 			}
 
 			fFilteredTree.setRedraw(false);
-			BusyIndicator.showWhile(fFilteredTree.getViewer().getTree().getDisplay(), () -> keyController.setDefaultBindings(fBindingService));
+			BusyIndicator.showWhile(fFilteredTree.getViewer().getTree()
+					.getDisplay(), new Runnable() {
+				@Override
+				public void run() {
+					keyController.setDefaultBindings(fBindingService);
+				}
+			});
 			fFilteredTree.setRedraw(true);
 			if (DEBUG) {
 				final long elapsedTime = System.currentTimeMillis() - startTime;
 				Tracing.printTrace(TRACING_COMPONENT,
-						"performDefaults:model in " + elapsedTime + "ms"); //$NON-NLS-1$ //$NON-NLS-2$
-
+						"performDefaults:model in " //$NON-NLS-1$
+								+ elapsedTime + "ms"); //$NON-NLS-1$
 			}
 		}
 
